--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h2>인덱스입니다</h2>
+<!DOCTYPE html>
+<html lang='ko' data-dark="true">
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h2>인덱스입니다</h2>
+</body>
+</html>
